p3/y.output
State 132 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: MAIN bloque

    2 bloque: INIBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    3 declar_de_variables_locales: LOCAL INIBLOQUE variables_locales FINBLOQUE
    4                            | %empty

    5 variables_locales: variables_locales cuerpo_declar_variables
    6                  | cuerpo_declar_variables

    7 cuerpo_declar_variables: TIPO lista_variables PYC
    8                        | error

    9 lista_variables: ID COMA lista_variables
   10                | ID

   11 lista_expresiones: lista_expresiones COMA expresion
   12                  | expresion

   13 declar_de_subprogs: declar_de_subprogs declar_subprog
   14                   | %empty

   15 declar_subprog: cabecera_subprog bloque

   16 cabecera_subprog: TIPO ID PARIZQ cabecera_argumentos PARDER

   17 cabecera_argumentos: parametros
   18                    | %empty
   19                    | error

   20 parametros: parametros COMA parametro
   21           | parametro

   22 parametro: TIPO ID

   23 sentencias: sentencias sentencia
   24           | %empty

   25 sentencia: bloque
   26          | expresion PYC
   27          | sentencia_asignacion
   28          | sentencia_lista
   29          | sentencia_if
   30          | sentencia_while
   31          | sentencia_entrada
   32          | sentencia_salida
   33          | sentencia_do_until
   34          | sentencia_return

   35 sentencia_asignacion: ID ASIGN expresion PYC

   36 sentencia_lista: expresion SHIFT PYC
   37                | DOLLAR expresion PYC

   38 sentencia_if: IF PARIZQ expresion PARDER sentencia bloque_else

   39 bloque_else: ELSE sentencia
   40            | %empty

   41 sentencia_while: WHILE PARIZQ expresion PARDER sentencia

   42 sentencia_entrada: CIN lista_variables PYC

   43 sentencia_salida: COUT lista_expresiones_o_cadena PYC

   44 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_cadena
   45                           | expresion_cadena

   46 expresion_cadena: expresion
   47                 | CADENA

   48 sentencia_do_until: DO sentencia UNTIL PARIZQ expresion PARDER PYC

   49 sentencia_return: RETURN expresion PYC

   50 expresion: PARIZQ expresion PARDER
   51          | ADDSUB expresion
   52          | EXCL expresion
   53          | INTHASH expresion
   54          | expresion AT expresion
   55          | expresion ANDLOG expresion
   56          | expresion ORLOG expresion
   57          | expresion EQN expresion
   58          | expresion ADDSUB expresion
   59          | expresion MULDIV expresion
   60          | expresion PORPOR expresion
   61          | expresion BORRLIST expresion
   62          | expresion REL expresion
   63          | expresion MASMAS expresion AT expresion
   64          | llamada_funcion
   65          | ID
   66          | constante
   67          | error

   68 llamada_funcion: ID PARIZQ argumentos PARDER

   69 argumentos: lista_expresiones
   70           | %empty

   71 constante: CONST
   72          | lista

   73 lista: CORIZQ lista_expresiones CORDER
   74      | CORIZQ CORDER


Terminals, with rules where they appear

$end (0) 0
error (256) 8 19 67
MAIN (258) 1
LOCAL (259) 3
TIPO (260) 7 16 22
PYC (261) 7 26 35 36 37 42 43 48 49
CIN (262) 42
COUT (263) 43
CADENA (264) 47
RETURN (265) 49
IF (266) 38
ELSE (267) 39
DO (268) 48
UNTIL (269) 48
WHILE (270) 41
SHIFT (271) 36
CONST (272) 71
INIBLOQUE (273) 2 3
FINBLOQUE (274) 2 3
CORIZQ (275) 73 74
CORDER (276) 73 74
COMA (277) 9 11 20 44
ASIGN (278) 35
PARDER (279) 16 38 41 48 50 68
PARIZQ (280) 16 38 41 48 50 68
DOLLAR (281) 37
ID (282) 9 10 16 22 35 65 68
MASMAS (283) 63
AT (284) 54 63
ORLOG (285) 56
ANDLOG (286) 55
EQN (287) 57
REL (288) 62
PORPOR (289) 60
BORRLIST (290) 61
ADDSUB (291) 51 58
MULDIV (292) 59
INTHASH (293) 53
EXCL (294) 52


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1, on right: 0
bloque (42)
    on left: 2, on right: 1 15 25
declar_de_variables_locales (43)
    on left: 3 4, on right: 2
variables_locales (44)
    on left: 5 6, on right: 3 5
cuerpo_declar_variables (45)
    on left: 7 8, on right: 5 6
lista_variables (46)
    on left: 9 10, on right: 7 9 42
lista_expresiones (47)
    on left: 11 12, on right: 11 69 73
declar_de_subprogs (48)
    on left: 13 14, on right: 2 13
declar_subprog (49)
    on left: 15, on right: 13
cabecera_subprog (50)
    on left: 16, on right: 15
cabecera_argumentos (51)
    on left: 17 18 19, on right: 16
parametros (52)
    on left: 20 21, on right: 17 20
parametro (53)
    on left: 22, on right: 20 21
sentencias (54)
    on left: 23 24, on right: 2 23
sentencia (55)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23 38 39 41 48
sentencia_asignacion (56)
    on left: 35, on right: 27
sentencia_lista (57)
    on left: 36 37, on right: 28
sentencia_if (58)
    on left: 38, on right: 29
bloque_else (59)
    on left: 39 40, on right: 38
sentencia_while (60)
    on left: 41, on right: 30
sentencia_entrada (61)
    on left: 42, on right: 31
sentencia_salida (62)
    on left: 43, on right: 32
lista_expresiones_o_cadena (63)
    on left: 44 45, on right: 43 44
expresion_cadena (64)
    on left: 46 47, on right: 44 45
sentencia_do_until (65)
    on left: 48, on right: 33
sentencia_return (66)
    on left: 49, on right: 34
expresion (67)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67,
    on right: 11 12 26 35 36 37 38 41 46 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63
llamada_funcion (68)
    on left: 68, on right: 64
argumentos (69)
    on left: 69 70, on right: 68
constante (70)
    on left: 71 72, on right: 66
lista (71)
    on left: 73 74, on right: 72


State 0

    0 $accept: . programa $end

    MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: MAIN . bloque

    INIBLOQUE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: INIBLOQUE . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    LOCAL  shift, and go to state 6

    $default  reduce using rule 4 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 7


State 4

    1 programa: MAIN bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 declar_de_variables_locales: LOCAL . INIBLOQUE variables_locales FINBLOQUE

    INIBLOQUE  shift, and go to state 8


State 7

    2 bloque: INIBLOQUE declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 14 (declar_de_subprogs)

    declar_de_subprogs  go to state 9


State 8

    3 declar_de_variables_locales: LOCAL INIBLOQUE . variables_locales FINBLOQUE

    error  shift, and go to state 10
    TIPO   shift, and go to state 11

    variables_locales        go to state 12
    cuerpo_declar_variables  go to state 13


State 9

    2 bloque: INIBLOQUE declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
   13 declar_de_subprogs: declar_de_subprogs . declar_subprog

    TIPO  shift, and go to state 14

    $default  reduce using rule 24 (sentencias)

    declar_subprog    go to state 15
    cabecera_subprog  go to state 16
    sentencias        go to state 17


State 10

    8 cuerpo_declar_variables: error .

    $default  reduce using rule 8 (cuerpo_declar_variables)


State 11

    7 cuerpo_declar_variables: TIPO . lista_variables PYC

    ID  shift, and go to state 18

    lista_variables  go to state 19


State 12

    3 declar_de_variables_locales: LOCAL INIBLOQUE variables_locales . FINBLOQUE
    5 variables_locales: variables_locales . cuerpo_declar_variables

    error      shift, and go to state 10
    TIPO       shift, and go to state 11
    FINBLOQUE  shift, and go to state 20

    cuerpo_declar_variables  go to state 21


State 13

    6 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 6 (variables_locales)


State 14

   16 cabecera_subprog: TIPO . ID PARIZQ cabecera_argumentos PARDER

    ID  shift, and go to state 22


State 15

   13 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 13 (declar_de_subprogs)


State 16

   15 declar_subprog: cabecera_subprog . bloque

    INIBLOQUE  shift, and go to state 3

    bloque  go to state 23


State 17

    2 bloque: INIBLOQUE declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   23 sentencias: sentencias . sentencia

    error      shift, and go to state 24
    CIN        shift, and go to state 25
    COUT       shift, and go to state 26
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    DO         shift, and go to state 29
    WHILE      shift, and go to state 30
    CONST      shift, and go to state 31
    INIBLOQUE  shift, and go to state 3
    FINBLOQUE  shift, and go to state 32
    CORIZQ     shift, and go to state 33
    PARIZQ     shift, and go to state 34
    DOLLAR     shift, and go to state 35
    ID         shift, and go to state 36
    ADDSUB     shift, and go to state 37
    INTHASH    shift, and go to state 38
    EXCL       shift, and go to state 39

    bloque                go to state 40
    sentencia             go to state 41
    sentencia_asignacion  go to state 42
    sentencia_lista       go to state 43
    sentencia_if          go to state 44
    sentencia_while       go to state 45
    sentencia_entrada     go to state 46
    sentencia_salida      go to state 47
    sentencia_do_until    go to state 48
    sentencia_return      go to state 49
    expresion             go to state 50
    llamada_funcion       go to state 51
    constante             go to state 52
    lista                 go to state 53


State 18

    9 lista_variables: ID . COMA lista_variables
   10                | ID .

    COMA  shift, and go to state 54

    $default  reduce using rule 10 (lista_variables)


State 19

    7 cuerpo_declar_variables: TIPO lista_variables . PYC

    PYC  shift, and go to state 55


State 20

    3 declar_de_variables_locales: LOCAL INIBLOQUE variables_locales FINBLOQUE .

    $default  reduce using rule 3 (declar_de_variables_locales)


State 21

    5 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 5 (variables_locales)


State 22

   16 cabecera_subprog: TIPO ID . PARIZQ cabecera_argumentos PARDER

    PARIZQ  shift, and go to state 56


State 23

   15 declar_subprog: cabecera_subprog bloque .

    $default  reduce using rule 15 (declar_subprog)


State 24

   67 expresion: error .

    $default  reduce using rule 67 (expresion)


State 25

   42 sentencia_entrada: CIN . lista_variables PYC

    ID  shift, and go to state 18

    lista_variables  go to state 57


State 26

   43 sentencia_salida: COUT . lista_expresiones_o_cadena PYC

    error    shift, and go to state 24
    CADENA   shift, and go to state 58
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    lista_expresiones_o_cadena  go to state 60
    expresion_cadena            go to state 61
    expresion                   go to state 62
    llamada_funcion             go to state 51
    constante                   go to state 52
    lista                       go to state 53


State 27

   49 sentencia_return: RETURN . expresion PYC

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 63
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 28

   38 sentencia_if: IF . PARIZQ expresion PARDER sentencia bloque_else

    PARIZQ  shift, and go to state 64


State 29

   48 sentencia_do_until: DO . sentencia UNTIL PARIZQ expresion PARDER PYC

    error      shift, and go to state 24
    CIN        shift, and go to state 25
    COUT       shift, and go to state 26
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    DO         shift, and go to state 29
    WHILE      shift, and go to state 30
    CONST      shift, and go to state 31
    INIBLOQUE  shift, and go to state 3
    CORIZQ     shift, and go to state 33
    PARIZQ     shift, and go to state 34
    DOLLAR     shift, and go to state 35
    ID         shift, and go to state 36
    ADDSUB     shift, and go to state 37
    INTHASH    shift, and go to state 38
    EXCL       shift, and go to state 39

    bloque                go to state 40
    sentencia             go to state 65
    sentencia_asignacion  go to state 42
    sentencia_lista       go to state 43
    sentencia_if          go to state 44
    sentencia_while       go to state 45
    sentencia_entrada     go to state 46
    sentencia_salida      go to state 47
    sentencia_do_until    go to state 48
    sentencia_return      go to state 49
    expresion             go to state 50
    llamada_funcion       go to state 51
    constante             go to state 52
    lista                 go to state 53


State 30

   41 sentencia_while: WHILE . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 66


State 31

   71 constante: CONST .

    $default  reduce using rule 71 (constante)


State 32

    2 bloque: INIBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 2 (bloque)


State 33

   73 lista: CORIZQ . lista_expresiones CORDER
   74      | CORIZQ . CORDER

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    CORDER   shift, and go to state 67
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    lista_expresiones  go to state 68
    expresion          go to state 69
    llamada_funcion    go to state 51
    constante          go to state 52
    lista              go to state 53


State 34

   50 expresion: PARIZQ . expresion PARDER

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 70
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 35

   37 sentencia_lista: DOLLAR . expresion PYC

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 71
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 36

   35 sentencia_asignacion: ID . ASIGN expresion PYC
   65 expresion: ID .
   68 llamada_funcion: ID . PARIZQ argumentos PARDER

    ASIGN   shift, and go to state 72
    PARIZQ  shift, and go to state 73

    $default  reduce using rule 65 (expresion)


State 37

   51 expresion: ADDSUB . expresion

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 74
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 38

   53 expresion: INTHASH . expresion

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 75
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 39

   52 expresion: EXCL . expresion

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 76
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 40

   25 sentencia: bloque .

    $default  reduce using rule 25 (sentencia)


State 41

   23 sentencias: sentencias sentencia .

    $default  reduce using rule 23 (sentencias)


State 42

   27 sentencia: sentencia_asignacion .

    $default  reduce using rule 27 (sentencia)


State 43

   28 sentencia: sentencia_lista .

    $default  reduce using rule 28 (sentencia)


State 44

   29 sentencia: sentencia_if .

    $default  reduce using rule 29 (sentencia)


State 45

   30 sentencia: sentencia_while .

    $default  reduce using rule 30 (sentencia)


State 46

   31 sentencia: sentencia_entrada .

    $default  reduce using rule 31 (sentencia)


State 47

   32 sentencia: sentencia_salida .

    $default  reduce using rule 32 (sentencia)


State 48

   33 sentencia: sentencia_do_until .

    $default  reduce using rule 33 (sentencia)


State 49

   34 sentencia: sentencia_return .

    $default  reduce using rule 34 (sentencia)


State 50

   26 sentencia: expresion . PYC
   36 sentencia_lista: expresion . SHIFT PYC
   54 expresion: expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    PYC       shift, and go to state 77
    SHIFT     shift, and go to state 78
    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88


State 51

   64 expresion: llamada_funcion .

    $default  reduce using rule 64 (expresion)


State 52

   66 expresion: constante .

    $default  reduce using rule 66 (expresion)


State 53

   72 constante: lista .

    $default  reduce using rule 72 (constante)


State 54

    9 lista_variables: ID COMA . lista_variables

    ID  shift, and go to state 18

    lista_variables  go to state 89


State 55

    7 cuerpo_declar_variables: TIPO lista_variables PYC .

    $default  reduce using rule 7 (cuerpo_declar_variables)


State 56

   16 cabecera_subprog: TIPO ID PARIZQ . cabecera_argumentos PARDER

    error  shift, and go to state 90
    TIPO   shift, and go to state 91

    PARDER  reduce using rule 18 (cabecera_argumentos)

    cabecera_argumentos  go to state 92
    parametros           go to state 93
    parametro            go to state 94


State 57

   42 sentencia_entrada: CIN lista_variables . PYC

    PYC  shift, and go to state 95


State 58

   47 expresion_cadena: CADENA .

    $default  reduce using rule 47 (expresion_cadena)


State 59

   65 expresion: ID .
   68 llamada_funcion: ID . PARIZQ argumentos PARDER

    PARIZQ  shift, and go to state 73

    $default  reduce using rule 65 (expresion)


State 60

   43 sentencia_salida: COUT lista_expresiones_o_cadena . PYC
   44 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expresion_cadena

    PYC   shift, and go to state 96
    COMA  shift, and go to state 97


State 61

   45 lista_expresiones_o_cadena: expresion_cadena .

    $default  reduce using rule 45 (lista_expresiones_o_cadena)


State 62

   46 expresion_cadena: expresion .
   54 expresion: expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88

    $default  reduce using rule 46 (expresion_cadena)


State 63

   49 sentencia_return: RETURN expresion . PYC
   54 expresion: expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    PYC       shift, and go to state 98
    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88


State 64

   38 sentencia_if: IF PARIZQ . expresion PARDER sentencia bloque_else

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 99
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 65

   48 sentencia_do_until: DO sentencia . UNTIL PARIZQ expresion PARDER PYC

    UNTIL  shift, and go to state 100


State 66

   41 sentencia_while: WHILE PARIZQ . expresion PARDER sentencia

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 101
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 67

   74 lista: CORIZQ CORDER .

    $default  reduce using rule 74 (lista)


State 68

   11 lista_expresiones: lista_expresiones . COMA expresion
   73 lista: CORIZQ lista_expresiones . CORDER

    CORDER  shift, and go to state 102
    COMA    shift, and go to state 103


State 69

   12 lista_expresiones: expresion .
   54 expresion: expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88

    $default  reduce using rule 12 (lista_expresiones)


State 70

   50 expresion: PARIZQ expresion . PARDER
   54          | expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    PARDER    shift, and go to state 104
    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88


State 71

   37 sentencia_lista: DOLLAR expresion . PYC
   54 expresion: expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    PYC       shift, and go to state 105
    MASMAS    shift, and go to state 79
    AT        shift, and go to state 80
    ORLOG     shift, and go to state 81
    ANDLOG    shift, and go to state 82
    EQN       shift, and go to state 83
    REL       shift, and go to state 84
    PORPOR    shift, and go to state 85
    BORRLIST  shift, and go to state 86
    ADDSUB    shift, and go to state 87
    MULDIV    shift, and go to state 88


State 72

   35 sentencia_asignacion: ID ASIGN . expresion PYC

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    expresion        go to state 106
    llamada_funcion  go to state 51
    constante        go to state 52
    lista            go to state 53


State 73

   68 llamada_funcion: ID PARIZQ . argumentos PARDER

    error    shift, and go to state 24
    CONST    shift, and go to state 31
    CORIZQ   shift, and go to state 33
    PARIZQ   shift, and go to state 34
    ID       shift, and go to state 59
    ADDSUB   shift, and go to state 37
    INTHASH  shift, and go to state 38
    EXCL     shift, and go to state 39

    PARDER  reduce using rule 70 (argumentos)

    lista_expresiones  go to state 107
    expresion          go to state 69
    llamada_funcion    go to state 51
    argumentos         go to state 108
    constante          go to state 52
    lista              go to state 53


State 74

   51 expresion: ADDSUB expresion .
   54          | expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    $default  reduce using rule 51 (expresion)


State 75

   53 expresion: INTHASH expresion .
   54          | expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    $default  reduce using rule 53 (expresion)


State 76

   52 expresion: EXCL expresion .
   54          | expresion . AT expresion
   55          | expresion . ANDLOG expresion
   56          | expresion . ORLOG expresion
   57          | expresion . EQN expresion
   58          | expresion . ADDSUB expresion
   59          | expresion . MULDIV expresion
   60          | expresion . PORPOR expresion
   61          | expresion . BORRLIST expresion
   62          | expresion . REL expresion
   63          | expresion . MASMAS expresion AT expresion

    $default  reduce using rule 52 (expresion)


State 77

   26 sentencia: expresion PYC .

    $default  reduce using rule 26 (sentencia)


State 78

   36 sentencia_lista: expresion SHIFT . PYC

    PYC  shift, and go to state 109


State 79

   63 expresion: expresion MASMAS . expresion AT expresion
